as per SME instruction

--- a/nvme_ol_90.adoc
+++ b/nvme_ol_90.adoc
@@ -313,7 +313,8 @@ round-robin
 # nvme list
 ----
 +
-Example output:
+*Example output:*
++
 ----
 Node         SN                   Model                          
 ---------------------------------------------------------  
