--- a/hu_wuhu_71_rn.adoc
+++ b/hu_wuhu_71_rn.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
 permalink: hu_wuhu_71_rn.html
-keywords: host utilities, linux, 7.1, netapp, ontap, release, notes
-summary: Release Notes for Windows Unified Host Utilities 7.1
+keywords: host utilities, linux, 7.1, 7.2, netapp, ontap, release, notes
+summary: Release Notes for Windows Unified Host Utilities 
 ---
 
-= Windows Unified Host Utilities 7.1 Release Notes
+= Windows Unified Host Utilities Release Notes
 :toc: macro
 :hardbreaks:
 :toclevels: 1
