as per SMe instruction

--- a/nvme_ol_90.adoc
+++ b/nvme_ol_90.adoc
@@ -27,9 +27,9 @@ For additional details on supported configurations, see the link:https://mysuppo
 
 There are no known limitations.
  
-== Validate NVMe version
+== Validate software versions
 
-You can validate the NVMe version using the following procedure.
+You can validate the minimum supported OL 9.0 software versions using the following procedure.
 
 .Steps
 
