test notice file

--- a/legal_notice.adoc
+++ b/legal_notice.adoc
@@ -6,6 +6,14 @@ summary: Legal notices provide access to copyright statements, trademarks, paten
 ---
 = Legal notices
 
+:toc: macro
+:hardbreaks:
+:toclevels: 1
+:nofooter:
+:icons: font
+:linkattrs:
+:imagesdir: ./media/
+
 Legal notices provide access to copyright statements, trademarks, patents, and more.
 
 == Copyright
@@ -32,9 +40,9 @@ https://www.netapp.com/us/legal/privacypolicy/index.aspx
 
 Provides information about third-party copyright and licenses used in this product.
 
-* link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2885298[Notice for AIX^]
-* link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2559115[Notice for Linux^]
-* link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2748979[Notice for Solaris^]
-* link:https://library.netapp.com/ecm/ecm_download_file/ECMLP2839136[Notice for Windows^]
+* link:./media/Notices-AIX61-2023.pdf[Notice for AIX^]
+* link:./media/Linux_Unified_Host_Utilities.pdf[Notice for Linux^]
+* link:./media/Solaris_Host_Utilities-2017.09.12-01.25.35.pdf[Notice for Solaris^]
+* link:./media/Windows_Unified_Host_Utilities_(WUHU) Notice.pdf[Notice for Windows^] 
 
 // 29 Mar 2023, HU notice file update
